Fixed issue with receipt content overflowing out of modal, adjust item spacing on order screen, and fixed price display in order card

--- a/student-store-ui/src/components/OrderCard/OrderCard.css
+++ b/student-store-ui/src/components/OrderCard/OrderCard.css
@@ -59,3 +59,7 @@
 .order-content .order-card-items {
     margin-top: 30px;
 }
+
+.order-card-item {
+    margin-top: 10px;
+}
